--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,9 @@
       <a class="nav-item nav-link" routerLink="">List Resturant</a>
       <a class="nav-item nav-link" routerLink="login">Log in user</a>
       <a class="nav-item nav-link" routerLink="register">Register User</a>
+      <a class="nav-item nav-link" routerLink="register">Register User</a>
+      <a class="nav-item nav-link" routerLink="register">Register User</a>
+      <a class="nav-item nav-link" routerLink="register">Register User</a>
       
     </div>
   </div>
